# gemseo-pdfo

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  README.md  pyproject.toml  setup.cfg  tox.ini
public/: versions.json
public/2.0.0/: 404.html  sitemap.xml
public/2.0.0/changelog/: index.html
public/2.0.0/credits/: index.html
public/2.0.0/reference/gemseo_pdfo/settings/: index.html
public/2.0.0/search/: search_index.json
public/2.0.1/: 404.html  index.html  sitemap.xml
public/2.0.1/changelog/: index.html
public/2.0.1/credits/: index.html
public/2.0.1/licenses/: index.html
public/2.0.1/reference/gemseo_pdfo/: index.html
public/2.0.1/reference/gemseo_pdfo/pdfo/: index.html
public/2.0.1/search/: search_index.json
public/2.0.1/user_guide/: index.html
public/2.0.2/: 404.html  sitemap.xml
public/2.0.2/reference/gemseo_pdfo/: index.html
public/2.0.2/reference/gemseo_pdfo/pdfo/: index.html
public/2.0.2/user_guide/: index.html
public/2.0.3/: 404.html  index.html  sitemap.xml
public/2.0.3/licenses/: index.html
public/2.0.3/reference/gemseo_pdfo/pdfo/: index.html
public/2.0.3/search/: search_index.json
public/2.0.3/user_guide/: index.html
public/develop/: 404.html  index.html  objects.inv  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/licenses/: index.html
public/develop/reference/SUMMARY/: index.html
public/develop/reference/gemseo_pdfo/: index.html
public/develop/reference/gemseo_pdfo/pdfo/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.8.txt  test-python3.9.txt
src/gemseo_pdfo/: lib_pdfo.py  pdfo.py
src/gemseo_pdfo/settings/: base_pdfo_settings.py
tests/: test_pdfo_algos.py
(+11 files in other folders)
